# Own-version-of-std-list

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
inc/: exceptions.hpp  list.hpp  node.hpp
src/: main.cpp
